<resources>
    <string name="app_name">Love test</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hint_name1">Your firstname</string>
    <string name="btn_test">Test</string>
    <string name="msg_err_champ">Fill in all fields.</string>
    <string name="question_2">How many time do you meet a week ?</string>
    <string name="question_3">Do you often laugh together  ?</string>
    <string name="question_4">When was your last dispute ?</string>
    <string name="reponse_1_2">Between one year and five years.</string>
    <string name="reponse_1_3">Five years and more.</string>
    <string name="reponse_2_1">Less than a day a week.</string>
    <string name="reponse_2_2">Between two and three days.</string>
    <string name="reponse_2_3">Three days and more.</string>
    <string name="reponse_3_1">Never.</string>
    <string name="reponse_3_2">Sometimes.</string>
    <string name="reponse_3_3">Always.</string>
    <string name="reponse_4_1">During the week.</string>
    <string name="reponse_4_2">One week and more.</string>
    <string name="reponse_4_3">One month and more.</string>
    <string name="reponse_5_1">Less than once a month.</string>
    <string name="reponse_5_2">Less than once a week.</string>
    <string name="reponse_5_3">Over two to three times a week.</string>
    <string name="txt_result">Result</string>
    <string name="again">Restart</string>
    <string name="rate_us">Rate us</string>
    <string name="question_5">How often do you have your sexual relations ?</string>
    <string name="reponse_1_1">Less than a year.</string>
    <string name="question_1">How long have been you together ?</string>
    <string name="hint_name2">Her/his firstname</string>
</resources>
