<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.softcaze.nicolas.testdamour.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:id="@+id/yourname"
        android:hint="@string/hint_name1"
        android:layout_width="250dp"
        android:padding="5dp"
        android:maxLines="1"
        android:layout_height="40dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"/>

    <ImageView
        android:id="@+id/heart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/heart"
        android:layout_below="@id/yourname"/>

    <EditText
        android:id="@+id/hername"
        android:hint="@string/hint_name2"
        android:layout_width="250dp"
        android:padding="5dp"
        android:maxLines="1"
        android:layout_height="40dp"
        android:layout_below="@id/heart"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hername"
        android:layout_marginTop="50dp"
        android:text="@string/btn_test"
        android:textColor="@color/colorWhite"
        android:background="@drawable/rounded_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/btn_test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:text="@string/msg_err_champ"/>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9468199307439621/7634345074" />

</RelativeLayout>
