<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.softcaze.nicolas.testdamour.ResultActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="60dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_result"/>

    <TextView
        android:id="@+id/title_names"
        android:text=""
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title"
        android:textColor="@color/colorWhite"
        android:textSize="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/heart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/heart"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100 %"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/play_again"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/again"
        android:layout_below="@+id/heart"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/rate_us"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:layout_below="@+id/play_again"
        android:layout_centerHorizontal="true"/>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9468199307439621/7634345074" />
</RelativeLayout>
